--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="row">
 
 
- <div class="col-xs-6 col-md-3" align="center">
+ <div class="col-md-3" align="center" style="background: #ccc;">
       <img src="http://cs625422.vk.me/v625422454/1fec2/3HfId0i5KFk.jpg" class="img-circle" alt="..." width="226px" height="226px" style="margin: 20px 0px 20px 0px;">
   </div>
 
@@ -63,7 +63,7 @@
 
 <div class="row">
 
-<div class="col-sm-3">
+<div class="col-md-3" style="background: #ccc;">
 	<ul class="nav nav-pills nav-stacked">
 		<li class="active" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
 		<a href="#">
@@ -73,7 +73,31 @@
 
 		<li data-toggle="tooltip" data-placement="left" title="Tooltip on left">
 		<a href="#">
-		<span class="badge pull-right">42</span>
+		<span class="badge pull-right">5</span>
+		button2
+		</a>
+
+		<li data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+		<a href="#">
+		<span class="badge pull-right">5</span>
+		button2
+		</a>
+
+		<li data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+		<a href="#">
+		<span class="badge pull-right">5</span>
+		button2
+		</a>
+
+		<li data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+		<a href="#">
+		<span class="badge pull-right">5</span>
+		button2
+		</a>
+
+		<li data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+		<a href="#">
+		<span class="badge pull-right">5</span>
 		button2
 		</a>
 	</ul>
